# GamEncin

./: .gitignore  CMakeLists.txt  Collider.h  GamEncin.sln  GamEncin.vcxproj  GamEncin.vcxproj.filters  Notes.md  README.md
Dependencies/GLAD/: glad.c  glad.h
Dependencies/GLFW/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
Dependencies/GLFW/src/: Makefile  cmake_install.cmake
Dependencies/GLM/: glm.cppm
Dependencies/GLM/detail/: glm.cpp
Dependencies/GLM/gtc/: integer.hpp
Dependencies/GLM/gtx/: texture.hpp  transform.hpp  wrap.hpp
Dependencies/STB/: stb_image.h  stb_image_write.h
GLAD/: glad.c
GLAD/include/: glad.h
GLAD/include/GLAD/: glad.h
GLM/include/: glm.cppm
GLM/include/detail/: glm.cpp
GamEncin/Resources/Fonts/Garamond/: README  fonts.alias  fonts.dir  garabol2.bdf  garabold.bdf  garamon2.bdf
GamEncin/Resources/Shaders/: frag.glsl
GamEncin/src/: AnyObject.h  Engine.cpp  Engine.h  GamEncin.h  Object.h  SceneManager.h  TODO.txt  UserObjects.h  main.cpp
GamEncin/src/Encin/: Application.cpp  Application.h  ComponentManager.cpp  ComponentManager.h  Components.h  ECS.cpp  ECS.h  Encin.h  EntityManager.cpp  EntityManager.h  GraphicLibraries.h  Items.cpp  Items.h  Object.h  Objects.cpp  Objects.h  SceneManager.cpp  SceneManager.h  SystemManager.cpp  SystemManager.h  Tools.cpp  Tools.h
GamEncin/src/Encin/Items/: Application.cpp  Application.h  Object.cpp  Object.h  OpenGLObjects.cpp  OpenGLObjects.h  PhysicsManager.cpp  PhysicsManager.h  Renderer.cpp  Renderer.h  RigidBodyManager.cpp  RigidBodyManager.h  Scene.cpp  Scene.h
GamEncin/src/Encin/Items/Components/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Mesh.cpp  Mesh.h  ModelMesh.cpp  ModelMesh.h  RigidBody.cpp  RigidBody.h  Text.cpp  Text.h  TextMesh.cpp  TextMesh.h  Transform.cpp  Transform.h
GamEncin/src/Encin/Tools/: InputSystem.cpp  InputSystem.h  MathYaman.cpp  MathYaman.h  OpenGLObjects.cpp  OpenGLObjects.h  Time.cpp  Time.h  Toolkit.cpp  Toolkit.h
GamEncin/src/Shaders/: default.frag  default.vert  frag.glsl  vert.glsl
GamEncin/src/User/: GamEncin.h  UserComponents.cpp  UserComponents.h  UserObjects.h  UserScenes.cpp  UserScenes.h  main.cpp
Other/: TODO.txt
binaries/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MyGameEngine.sln  MyGameEngine.vcxproj  MyGameEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/Encin/: Components.h  SceneManager.h
src/User/: main.cpp
